force-app/main/default/objects/Customer_Demand_Line_item__c/Customer_Demand_Line_item__c.object-meta.xml
<CustomObject>
    <label>Customer Demand Line item</label>
    <nameField>
        <displayFormat>CDLI-{000000000}</displayFormat>
        <label>Customer Demand Line item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Demand Line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>