force-app/main/default/objects/Customer_Demand_Line_item__c/fields/Customer_Demand__c.field-meta.xml
<CustomField>
    <fullName>Customer_Demand__c</fullName>
    <label>Customer Demand</label>
    <referenceTo>Customer_Demand__c</referenceTo>
    <relationshipLabel>Customer Demand Line items</relationshipLabel>
    <relationshipName>Customer_Demand_Line_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>