force-app/main/default/objects/Customer_Demand_Line_item__c/fields/Material_Master__c.field-meta.xml
<CustomField>
    <fullName>Material_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Master</label>
    <referenceTo>MD_Product2__c</referenceTo>
    <relationshipLabel>Customer Demand Line items</relationshipLabel>
    <relationshipName>Customer_Demand_Line_items</relationshipName>
    <type>Lookup</type>
</CustomField>