force-app/main/default/objects/Customer_Demand_Line_item__c/fields/Price_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment_Type__c</fullName>
    <label>Price Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Surcharge</fullName>
            </value>
            <value>
                <fullName>ZKDS</fullName>
                <isActive>false</isActive>
                <label>ZKDS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>