force-app/main/default/objects/Customer_Demand_Line_item__c/fields/SAP_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Quote_Number__c</fullName>
    <label>SAP Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>