force-app/main/default/objects/Customer_Demand_Line_item__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <label>Ship-To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>