force-app/main/default/objects/Customer_Demand_Line_item__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <label>Storage Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Karachi</fullName>
            </value>
            <value>
                <fullName>Lahore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>