force-app/main/default/objects/Customer_Demand_Line_item__c/fields/Total_Allocation_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation_Quantity__c</fullName>
    <label>Total Allocation Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>