force-app/main/default/objects/Customer_Demand_Line_item__c/fields/Total_Block__c.field-meta.xml
<CustomField>
    <fullName>Total_Block__c</fullName>
    <label>Total Block</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>