force-app/main/default/objects/Customer_Demand_Line_item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Demand__c</columns>
    <columns>Material_Master__c</columns>
    <columns>Item_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>